--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adambenaceur.github.io/adambenaceur.com/",
+  "homepage": "https://adambenaceur.com/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
