added react snap-scroll effect / outlined sections / removed side scroll bar

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://adambenaceur.com/",
+  "homepage": "https://adambenaceur.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
